[project]
name = "haddock-curses"
version = "0.1.7"
description = "Random curses from Captain Haddock"
authors = [{ name = "asmaier", email = "asmaier@web.de" }]
requires-python = ">=2.7"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: German",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/asmaier/haddock"

[tool.hatch.build.targets.sdist]
include = ["haddock"]

[tool.hatch.build.targets.wheel]
include = ["haddock"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
